# langserve_chatbot

./: README.md
cherrobot/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  ollama_entrypoint.sh  pull_model.sh  pyproject.toml  railway.toml
cherrobot/app/: server.py  st_chatbot.py
doc/: project_overview.md
